# hexdoc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  cookiecutter.json  copier.yml  hexdoc.toml  hexdoc_minecraft.toml  hexdoc_textures.toml  nodemon.json  noxfile.py  properties.toml  pyproject.toml  test.py
.github/actions/install-artifact-wheel/: action.yml
.github/workflows/: ci.yml  ci_scheduled.yml  docs.yml  hexdoc-plugin.yml  hexdoc.yml  pdoc.yml
docs/pdoc/: module.html.jinja2
examples/model_rendering/: .gitignore  README.md  hexdoc.toml  requirements.txt
resources/assets/emi/lang/: en_us.json
src/_scripts/: README.md  json_schema.py
src/hexdoc/: __init__.py  __main__.py  __version__.py  _hooks.py  app.py
src/hexdoc/_cli/: app.py  render_block.py
src/hexdoc/_cli/utils/: args.py  load.py  logging.py  render.py  sitemap.py
src/hexdoc/_export/resources/: hexdoc.hexdoc.json
src/hexdoc/_templates/: category.html.jinja  entry.html.jinja  index.css.jinja  index.html.jinja  index.js.jinja  redirect.html.jinja  textures.jcss.jinja
src/hexdoc/_templates/components/: navbar.html.jinja  opengraph.html.jinja  table_of_contents.html.jinja  welcome.html.jinja
src/hexdoc/_templates/macros/: formatting.html.jinja  formatting.jinja  formatting.md.jinja  formatting.txt.jinja  images.html.jinja  recipes.html.jinja  styles.html.jinja  styles.md.jinja  styles.txt.jinja  textures.html.jinja
src/hexdoc/_templates/recipes/: base.html.jinja
src/hexdoc/_templates/redirects/: base.html.jinja  book_link.html.jinja  category.html.jinja  entry.html.jinja  page.html.jinja
src/hexdoc/cli/: app.py  ci.py  main.py  render_block.py
src/hexdoc/cli/utils/: __init__.py  args.py  info.py  load.py  logging.py  render.py  sitemap.py
src/hexdoc/core/: __init__.py  compat.py  i18n.py  loader.py  properties.py  resource.py  resource_dir.py
src/hexdoc/core/properties/: __init__.py  env.py  lang.py  properties.py  template.py  textures.py
src/hexdoc/data/: __init__.py  metadata.py  sitemap.py
src/hexdoc/graphics/: __init__.py  annotations.py  block.py  camera.py  loader.py  lookups.py  render.py  renderer.py  texture.py  utils.py  validators.py
src/hexdoc/graphics/glsl/: block_fragment.glsl
src/hexdoc/graphics/model/: __init__.py  animation.py  block.py  display.py  element.py
src/hexdoc/hexcasting/: hex_book.py
src/hexdoc/jinja/: __init__.py  extensions.py  filters.py  render.py
src/hexdoc/minecraft/: __init__.py  _assets.py  i18n.py  model_loader.py  tags.py
src/hexdoc/minecraft/assets/: __init__.py  animated.py  constants.py  external.py  items.py  load.py  load_assets.py  models.py  textures.py  with_texture.py
src/hexdoc/minecraft/model/: __init__.py  block.py  blockstate.py  element.py  variable.py
src/hexdoc/minecraft/models/: __init__.py  base.py  base_model.py  block.py  item.py  load.py
src/hexdoc/minecraft/recipe/: __init__.py  abstract_recipes.py  ingredients.py  recipes.py
src/hexdoc/model/: __init__.py  base.py  id.py  inline.py  strip_hidden.py  tagged_union.py  types.py
src/hexdoc/patchouli/: __init__.py  _hooks.py  book.py  book_context.py  category.py  entry.py  flag.py  text.py  utils.py
src/hexdoc/patchouli/page/: __init__.py  abstract_pages.py  pages.py
src/hexdoc/plugin/: __init__.py  book_plugin.py  manager.py  mod_plugin.py  specs.py  types.py
src/hexdoc/utils/: __init__.py  classproperties.py  commands.py  context.py  git.py  graphs.py  iterators.py  json_schema.py  logging.py  path.py  singletons.py  tracebacks.py  types.py
src/hexdoc/utils/deserialize/: __init__.py  assertions.py  json.py  toml.py
src/hexdoc/utils/jinja/: __init__.py  filters.py
src/hexdoc_minecraft/: _hooks.py  app.py  asset_loader.py  minecraft_assets.py  piston_meta.py
src/hexdoc_modonomicon/: _hooks.py  book.py  category.py  condition.py  entry.py
src/hexdoc_modonomicon/_export/resources/: __init__.py
src/hexdoc_modonomicon/page/: __init__.py  abstract_pages.py  pages.py
template/: .copier-answers.yml.jinja  .gitignore  pyproject.toml.jinja
template/.github/workflows/: build_docs.yml.jinja
template/doc/: README.md.jinja  hexdoc.toml.jinja  nodemon.json.jinja
template/doc/src/{{package_slug}}/: _hooks.py.jinja
test/: conftest.py  test_cookiecutter.py  tree.py
test/_cli/: test_main.py
test/_cli/__snapshots__/: test_main.ambr
test/_cli/__snapshots__/test_main/: test_files[vlatestindex.html].raw
test/cli/: test_main.py
test/cli/__snapshots__/test_main/: test_files[vlatestindex.css].raw  test_files[vlatestindex.html].raw  test_files[vlatesttextures.css].raw
test/core/: test_loader.py  test_resource.py
test/graphics/model/: test_element.py
test/hooks/: test_manager.py
test/integration/: test_cookiecutter.py  test_copier.py  test_extend_book.py  test_main.py  test_merge.py  test_modpack.py
test/integration/__snapshots__/: test_cookiecutter.ambr  test_copier.ambr  test_main.ambr  test_main_1.19.ambr  test_main_1.20.ambr  test_main_main.ambr
test/integration/__snapshots__/test_cookiecutter/: test_cookiecutter[vlatestindex.html].raw  test_cookiecutter[vlatestmainen_usindex.html].raw
test/integration/__snapshots__/test_copier/: test_copier[vlatestmainen_usindex.html].raw  test_index[vlatestmainen_usindex.html].raw
test/integration/__snapshots__/test_main/: test_files[vlatestindex.css].raw  (+5 more)
test/minecraft/: test_i18n.py  test_tags.py
test/minecraft/assets/: test_with_texture.py
test/minecraft/recipe/: test_recipes.py
test/model/: test_tagged_union.py
test/patchouli/: test_page.py  test_text.py
test/utils/: test_logging.py  test_types.py
test/utils/deserialize/: test_toml.py
typings/: copier.pyi
web/docusaurus/: .gitignore  .prettierrc  algolia.json  docusaurus.config.ts  package-lock.json  package.json
web/docusaurus/docs/: 01-intro.md  01-intro.mdx  intro.md
{{cookiecutter.output_directory}}/: .gitignore  pyproject.toml
{{cookiecutter.output_directory}}/.github/workflows/: build_docs.yml
{{cookiecutter.output_directory}}/doc/: hexdoc.toml  nodemon.json
(+94 files in other folders)
